# zephyr-kconfig-root

./: .gitignore  LICENSE  builder.Dockerfile  readme.md
.github/workflows/: ci.yml
app_00_replace_root/: CMakeLists.txt
app_01_rsource/: Kconfig  prj.conf
app_01_rsource/src/: main.c
app_02_modules/: CMakeLists.txt  prj.conf  tasks.py
extra-zephyr-modules/dummy/: CMakeLists.txt  Kconfig
extra-zephyr-modules/dummy/zephyr/: module.yml
kconfig-root/: Kconfig
kconfig-rsource/: Kconfig
